# go-draco

./: .gitignore  CMakeLists.txt  README.md  decoder.go  draco.go  draco_test.go  encoder.go  go.mod  go.sum  mesh.go  mesh_builder.go  pointcloud.go  pointcloud_builder.go
lib/: draco_api.h
src/: CMakeLists.txt  draco_api.cc  draco_api.h  draco_test.cc
