
include_directories(${FLYWAVE_INCLUDE_DIRS})

FILE( GLOB draco_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc )
FILE( GLOB draco_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hh ${CMAKE_CURRENT_SOURCE_DIR}/*.h )

ADD_LIBRARY(c_draco STATIC
            ${draco_HEADER_FILES}
            ${draco_SOURCE_FILES}
          )

TARGET_INCLUDE_DIRECTORIES(c_draco PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)

SOURCE_GROUP("src" FILES ${draco_SOURCE_FILES})
SOURCE_GROUP("include" FILES ${draco_HEADER_FILES})

SET_TARGET_PROPERTIES(c_draco
                    PROPERTIES PUBLIC_HEADER "${headers}")
