
include_directories(${FLYWAVE_INCLUDE_DIRS})

FILE( GLOB draco_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc )
FILE( GLOB draco_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hh ${CMAKE_CURRENT_SOURCE_DIR}/*.h )

ADD_LIBRARY(c_draco STATIC
            ${draco_HEADER_FILES}
            ${draco_SOURCE_FILES}
          )

TARGET_INCLUDE_DIRECTORIES(c_draco PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)

SOURCE_GROUP("src" FILES ${draco_SOURCE_FILES})
SOURCE_GROUP("include" FILES ${draco_HEADER_FILES})

SET_TARGET_PROPERTIES(c_draco
                    PROPERTIES PUBLIC_HEADER "${headers}")

SET(test_SOURCE_FILES draco_test.cc)
SOURCE_GROUP("src" FILES ${test_SOURCE_FILES})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_EXECUTABLE(test ${test_SOURCE_FILES})

IF(FLYWAVE_ENABLE_SOLUTION_FOLDERS)
  SET_TARGET_PROPERTIES(test PROPERTIES FOLDER tests)
ENDIF(FLYWAVE_ENABLE_SOLUTION_FOLDERS)

IF(UNIX AND NOT APPLE)
TARGET_LINK_LIBRARIES(test -Wl,--start-group ${FLYWAVE_LIBRARY_DEPES} c_draco -Wl,--end-group)
ELSEIF(MINGW)
TARGET_LINK_LIBRARIES(test -Wl,--start-group ${FLYWAVE_LIBRARY_DEPES} c_draco -Wl,--end-group)
ELSE()
TARGET_LINK_LIBRARIES(test ${FLYWAVE_LIBRARY_DEPES} c_draco)
ENDIF()